Fixed switching between the Aspect modes

The change of the resolution should happen in the setZoom, otherwise
it will not know the old values of the document rect and zoom.

BUG:307769